force-app/main/default/objects/Product_transfer__c/Product_transfer__c.object-meta.xml
<CustomObject>
    <label>Product Transfer.</label>
    <nameField>
        <displayFormat>PT-{00000000}</displayFormat>
        <label>Product Transfer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Transfer.</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>