force-app/main/default/objects/Product_transfer__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Source location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Product Transfer. (Source location)</relationshipLabel>
    <relationshipName>Stock_in_out</relationshipName>
    <type>Lookup</type>
</CustomField>