force-app/main/default/objects/Product_transfer__c/fields/Inventory_Lock__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Lock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BAO NK: one Product transfer record can update Inventory only ONCE</description>
    <inlineHelpText>Inventory already updated!</inlineHelpText>
    <label>Inventory Lock</label>
    <type>Checkbox</type>
</CustomField>