force-app/main/default/objects/Product_transfer__c/fields/IsLocked__c.field-meta.xml
<CustomField>
    <fullName>IsLocked__c</fullName>
    <description>BAO NK: lock editing this record and its child record Product Transfer Line</description>
    <formula>not(ispickval( Status__c ,&quot;Created&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsLocked</label>
    <type>Checkbox</type>
</CustomField>