force-app/main/default/objects/Product_transfer__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Destination location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Product Transfer. (Destination location)</relationshipLabel>
    <relationshipName>Stock_in_out1</relationshipName>
    <type>Lookup</type>
</CustomField>