force-app/main/default/objects/Product_transfer__c/recordTypes/Good_Issue.recordType-meta.xml
<RecordType>
    <fullName>Good_Issue</fullName>
    <active>true</active>
    <label>Good Issue</label>
</RecordType>