force-app/main/default/objects/Product_transfer__c/recordTypes/Good_Receipt.recordType-meta.xml
<RecordType>
    <fullName>Good_Receipt</fullName>
    <active>true</active>
    <label>Good Receipt</label>
</RecordType>