force-app/main/default/objects/Product_transfer__c/recordTypes/Good_Transfer.recordType-meta.xml
<RecordType>
    <fullName>Good_Transfer</fullName>
    <active>true</active>
    <label>Good Transfer</label>
</RecordType>